# scorebase

./: .annotaterb.yml  .gitignore  CLAUDE.md  Dockerfile  Gemfile  README.md  docker-compose.yml
.claude/: settings.local.json
.kamal/: secrets
config/: application.rb  appsignal.rb  brakeman.ignore  composer_periods.yml  credentials.yml.enc  database.yml  deploy.yml  genre_vocabulary.yml  queue.yml  recurring.yml  routes.rb  sitemap.rb  storage.yml
db/: canonical_composers_imslp.txt  schema.rb
design-preview/: scorebase-neon-v2.html  scorebase-neon-v3.html  scorebase-neon-v4.html  scorebase-neon.html
docs/: SECURITY_AUDIT.md  mobile-first.md  musicxml-metadata-extraction.md  musicxml-sources.md  pro-architecture.md  pro-landing-page-todos.md  rag-pipeline-improvement.md  rag-system.md  scorebase-pro-product.md  todo.md  user-authentication.md  waitlist-implementation.md
public/: robots.txt
rag/: .gitignore  extract.py  extract_chord_span.py  pyproject.toml  requirements.txt  todo.md
rag/extractor/: __init__.py
rag/scripts/: explore_mxl.py
rag/src/: __init__.py  config.py  db.py
rag/src/api/: main.py
rag/src/enrichment/: __init__.py  enrich.py  parser.py
rag/src/llm/: __init__.py  description_agent.py  description_generator.py  groq_client.py  lmstudio_client.py  metadata_transformer.py  result_selector.py  schemas.py
rag/src/pipeline/: __init__.py  eval.py  indexer.py  search.py
rag/tests/: __init__.py  test_extract.py  test_metadata_transformer.py
script/: fix_corrupted_composers.rb  mobile_inspector.rb  normalize_pending_composers.rb
(+267 files in other folders)
